Update language tags

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -217,234 +217,6 @@
         id="pattern"
         class="pattern-section container flex gap-6-4 margin-LF-auto"
       >
-        <!-- FRIDAS SWEATER ENGLISH -->
-
-        <!-- <article id="fge" class="page-section--product">
-          <i id="closeIconFge" class="fa-solid fa-xmark pattern-page-icon"></i>
-          <p class="sticker">English</p>
-          <h1 class="page-heading h1-heading product-heading font-size-6-4">
-            Frida's sweater
-          </h1>
-          <section class="grid grid--6-cols gap-6-4">
-            <article class="pattern-img-section">
-              <div class="pattern-img-main">
-                <img class="main-img" src="/Img/Fridas-genser/6.png" />
-              </div>
-              <div class="pattern-img-other">
-                <img class="pattern-img" src="/Img/Fridas-genser/2.png" />
-                <img class="pattern-img" src="/Img/Fridas-genser/1.png" />
-                <img class="pattern-img" src="/Img/Fridas-genser/5.png" />
-                <img class="pattern-img" src="/Img/Fridas-genser/4.png" />
-              </div>
-            </article>
-            <article class="pattern-text pattern-description">
-              <h3 class="text-heading">description</h3>
-              <p class="description">
-                Frida´s sweater is knitted from the top down, in stockinette
-                stick with twisted ribs.<br /><br />The yoke is made from
-                provisional cast on and continues with raglan increases.<br /><br />The
-                sweater has an elegant v-neck and collar which is made at the
-                end from the provisional cast on.<br /><br />Always start with a
-                swatch to check the gauge.<br /><br />
-
-                <span>Degree of difficulty:</span>
-                3 of 5
-              </p>
-              <a
-                target="_blank"
-                href="https://www.ravelry.com/patterns/library/fridas-genser"
-                class="btn btn--with-icon"
-              >
-                <i class="fa-solid fa-cart-plus add-cart-icon--btn"></i>
-                BUY ON RAVELRY
-              </a>
-            </article>
-            <article class="pattern-text pattern-info">
-              <h3 class="text-heading">Info</h3>
-              <p class="description">
-                <span>Sizes:</span> XS (S) M (L) XL (2XL)<br /><br />
-                <span>Gauge:</span> 4”/10 cm = 12 sts / 18 rows stockinette.
-                Taken after wet blocking using 8 mm needles.<br /><br />
-                <span>Needles:</span> Circular needle size 8 mm - 40 cm and
-                60/80 cm. Circular needle size 7 mm ( US 10 ) - 40 cm and 60/80
-                cm and double pointed needle if you do not use magic loop.<br /><br />
-                <span>Yarn:</span> One thread Drops Brushed Alpaca Silk (25g =
-                140m) together with one thread Drops Muskat (50g = 100m)<br /><br />
-                <span>Yarn options:</span> One thread Sandnes Silk Mohair or
-                Dale garn Kidsilk Erle together with one thread Sandnes Line
-                eller Sandnes Duo or Gjestal garn Pure Merino or Dale garn
-                Lerke<br /><br />
-                <span>Materials: </span>100 (100) 125 (150) 150 (200) g Drops
-                brushed alpaca silk Lys Lavendel 17 together with 350 (350) 400
-                (450) 500 (500) g Drops muskat Lavendel 01<br /><br />
-                <span>Measurements:</span><br />
-                <span>Length back:</span> 50 (51) 53 (59) 60 (63) cm <br /><span
-                  >Body:</span
-                >
-                110 (115) 120 (125) 135 (138) cm
-              </p>
-            </article>
-          </section>
-        </article> -->
-
-        <!-- GUROS SWEATER ENGLISH -->
-
-        <!-- <article id="gge" class="page-section--product">
-          <i id="closeIconGge" class="fa-solid fa-xmark pattern-page-icon"></i>
-          <p class="sticker">English</p>
-          <h1 class="page-heading h1-heading product-heading font-size-6-4">
-            Guro's sweater
-          </h1>
-          <section class="grid grid--6-cols gap-6-4">
-            <article class="pattern-img-section">
-              <div class="pattern-img-main">
-                <img class="main-img" src="/Img/Guros-genser/1.png" />
-              </div>
-              <div class="pattern-img-other">
-                <img class="pattern-img" src="/Img/Guros-genser/2.png" />
-                <img class="pattern-img" src="/Img/Guros-genser/7.png" />
-                <img class="pattern-img" src="/Img/Guros-genser/3.png" />
-                <img class="pattern-img" src="/Img/Guros-genser/5.png" />
-              </div>
-            </article>
-            <article class="pattern-text pattern-description">
-              <h3 class="text-heading">Description</h3>
-              <p class="description">
-                Guro's sweater is knitted from the top down in broken rib with
-                raglan increases. The neck edge, cuffs and hem are worked in
-                rib. The shoulders is created with German short rows worked back
-                and forth.<br /><br />Begin by working a swatch to determine
-                which needle size you need to achieve the correct gauge. Wash
-                your swatch before measuring the gauge – as broken rib grows
-                with wash.<br /><br />The sweater is oversized, long and wide.
-                The sleeves are straight and the neck is folded down. It is
-                comfortable and a dream to wear.<br /><br />
-
-                <span>Degree og diffuculty:</span>
-                3 of 5 (Because of GSR)
-              </p>
-              <a
-                target="_blank"
-                href="https://www.ravelry.com/patterns/library/guros-genser"
-                class="btn btn--with-icon"
-              >
-                <i class="fa-solid fa-cart-plus add-cart-icon--btn"></i>
-                BUY ON RAVELRY
-              </a>
-            </article>
-            <article class="pattern-text pattern-info">
-              <h3 class="text-heading">Info</h3>
-              <p class="description">
-                <span>Sizes:</span> XS (S) M (L) XL (2XL)<br /><br />
-                <span>Gauge:</span> 4”/10 cm = 20 sts rib. Taken after wet
-                blocking using needle size 4,5 mm.<br /><br />
-                <span>Needles:</span> Circular needle size 4,5 mm - 40 cm and
-                60/80 cm. Circular needle size 4 mm - 40 cm and 60/80 cm<br /><br />
-                <span>Yarn:</span> One thread Dale garn Lerke (50g = 115m)<br /><br />
-                <span>Yarn options:</span> One thread Sandnes Merinoull (50g =
-                105m) or Viking garn Alpaca Storm (50g = 133m)<br /><br />
-                <span>Materials:</span> 650 (650) 700 (750) 800 (850) g Dale
-                garn Lerke<br /><br />
-                <span>Measurements:</span><br />
-                <span>Length:</span> 67 (69) 71 (73) 75 (77) cm <br /><span
-                  >Body:</span
-                >110 (122) 129 (136) 143 (152) cm
-              </p>
-            </article>
-          </section>
-        </article> -->
-
-        <!-- EVELINAGENSER SVENSK -->
-
-        <!-- <article id="egs" class="page-section--product">
-          <i id="closeIconEgs" class="fa-solid fa-xmark pattern-page-icon"></i>
-          <p class="sticker">Svenska</p>
-          <h1 class="page-heading h1-heading product-heading font-size-6-4">
-            Evelinatröjan
-          </h1>
-          <section class="grid grid--6-cols gap-6-4">
-            <article class="pattern-img-section">
-              Slide container
-              <div class="slider">
-                Slide 1
-                <div class="slide pattern-img-main">
-                  <img
-                    class="pattern-img"
-                    src="/Img/Evelinagenser/Evelinagenser 2.jpg"
-                  />
-                </div>
-                Slide 2
-                <div class="slide">
-                  <img class="pattern-img" src="/Img/Guros-lue/gl2.png" />
-                </div> -->
-        <!-- Slide 3 -->
-        <!-- <div class="slide">
-                  <img class="pattern-img" src="/Img/Guros-lue/gl4.png" />
-                </div>
-              </div> -->
-        <!-- Buttons -->
-        <!-- <button class="btn-prev slide-btn">
-                <i class="fa-solid fa-angle-left"></i>
-              </button>
-              <button class="btn-next slide-btn">
-                <i class="fa-solid fa-angle-right"></i>
-              </button>
-            </article>
-
-            <article class="pattern-text pattern-description">
-              <h3 class="text-heading">Beskrivning</h3>
-              <p class="description">
-                Evelinatröjan stickas uppifrån och ner i ett randmönster med
-                v-ringning. Hela tröjan stickas i två trådar Drops brushed
-                alpacka silk, i 6 olika färger.<br /><br />Tröjan stickas fram
-                och tillbaka med raglanökningar – fram till dess att ärmar,
-                fram- och bakstycket och halsringningen är klar. Ärmar och bål
-                stickas runt på rundstickor. Resåren vid hals, ärmar och på
-                bålen stickas med vridet räta maskor för en tydligare struktur.
-                Maskorna i halsringningen stickas till slut.<br /><br />Tröjan
-                är oversized och ärmarna är ⁄ långa. Den passar fint att ha över
-                en skjorta, över en enkel klänning på sommarkvällarna eller
-                tillsammans med en enkel byxa.<br /><br />
-
-                <span>Svårighetsgrad:</span>
-                2 av 5
-              </p>
-              <a
-                target="_blank"
-                href="https://www.ravelry.com/patterns/library/evelinagenser"
-                class="btn btn--with-icon"
-              >
-                <i class="fa-solid fa-cart-plus add-cart-icon--btn"></i>
-                KÖP PÅ RAVELRY
-              </a>
-            </article> -->
-        <!-- <article class="pattern-text pattern-info">
-              <h3 class="text-heading">Info</h3>
-              <p class="description">
-                <span>Storlekar:</span> XS (S) M (L) XL<br /><br />
-                <span>Stickfasthet:</span> 15 maskor i slätstickning på stickor
-                6 mm = 10 cm<br /><br />
-                <span>Stickor:</span> Rundsticka 6 mm, 40 cm och 60/80 cm, och
-                rundsticka 5 mm 40 cm och strumpstickor eller rundstickor 60 cm
-                (magic loop)<br /><br />
-                <span>Garn:</span> Två trådar Drops brushed alpacka silk<br /><br />
-                <span>Garnalternativ:</span> Två trådar DSA faerytale eller två
-                trådar Dale garn Kidsilk Erle<br /><br />
-                <span>Garnmängd:</span> 75 (75) 100 (100) 125 g ljus lavendel 17
-                (huvudfärg), 25 (25) 50 (50) 75 g Natur 01, 25 (25) 50 (50) 75 g
-                violett 10 , 25 (25) 50 (50) 75 g Beige 05, 25 (25) 50 (50) 75 g
-                Ljus grågrön 14, 25 (25) 50 (50) 75 g salviagrön 21 = 200 (200)
-                350 (350) 500 g<br /><br />
-                <span>Mått:</span><br />
-                <span>Längd:</span> 47 (51) 53 (56) 60 cm <br /><span
-                  >Övervidd:</span
-                >
-                126 (130) 140 (144) 152 cm
-              </p>
-            </article>
-          </section>
-        </article>  -->
-
         <section class="section margin-LF-auto">
           <h2 class="pattern-heading h2-heading page-heading font-size-6-4">
             Oppskrifter
@@ -472,9 +244,10 @@
                       alt="woman with a knitted sweater on a boat"
                     />
                   </figure>
-                  <section class="pattern-card-text-box grid grid--1-col">
+                  <section class="pattern-card-text-box grid grid--2-cols">
                     <h3 class="pattern-card-heading">Guros lue</h3>
                     <p class="pattern-card-price">30.00 NOK</p>
+                    <p class="lang-p">NO</p>
                   </section>
                 </a>
 
@@ -502,7 +275,7 @@
                 <a
                   href="/HTML/Guros-genser.html"
                   id="ggnCard"
-                  class="pattern-card norsk"
+                  class="pattern-card english"
                 >
                   <figure class="pattern-card-item">
                     <img
@@ -521,7 +294,7 @@
                 <a
                   href="/HTML/Fridas-genser.html"
                   id="fgnCard"
-                  class="pattern-card norsk"
+                  class="pattern-card english"
                 >
                   <figure class="pattern-card-item">
                     <img
@@ -541,7 +314,7 @@
                 <a
                   href="/HTML/Evelinagenser.html"
                   id="egnCard"
-                  class="pattern-card norsk"
+                  class="pattern-card svenska"
                 >
                   <figure class="pattern-card-item">
                     <img
