Add sizes to pattern cards

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -244,10 +244,10 @@
                       alt="woman with a knitted sweater on a boat"
                     />
                   </figure>
-                  <section class="pattern-card-text-box grid grid--2-cols">
+                  <section class="pattern-card-text-box grid grid--1-col">
                     <h3 class="pattern-card-heading">Guros lue</h3>
                     <p class="pattern-card-price">30.00 NOK</p>
-                    <p class="lang-p">NO</p>
+                    <p class="str-p">Str baby - voksen</p>
                   </section>
                 </a>
 
@@ -267,6 +267,7 @@
                   <section class="pattern-card-text-box grid grid--1-col">
                     <h3 class="pattern-card-heading">Malins genser</h3>
                     <p class="pattern-card-price">60.00 NOK</p>
+                    <p class="str-p">Str XS - XL</p>
                   </section>
                 </a>
 
@@ -287,6 +288,7 @@
                   <section class="pattern-card-text-box grid grid--1-col">
                     <h3 class="pattern-card-heading">Guros genser</h3>
                     <p class="pattern-card-price">60.00 NOK</p>
+                    <p class="str-p">Str XS - 2XL</p>
                   </section>
                 </a>
 
@@ -307,6 +309,7 @@
                   <section class="pattern-card-text-box grid grid--1-col">
                     <h3 class="pattern-card-heading">Fridas genser</h3>
                     <p class="pattern-card-price">60.00 NOK</p>
+                    <p class="str-p">Str XS - 2XL</p>
                   </section>
                 </a>
 
@@ -327,6 +330,7 @@
                   <section class="pattern-card-text-box grid grid--1-col">
                     <h3 class="pattern-card-heading">Evelinagenser</h3>
                     <p class="pattern-card-price">60.00 NOK</p>
+                    <p class="str-p">Str XS - XL</p>
                   </section>
                 </a>
               </section>
