Add media queries to product pages

--- a/HTML/Fridas-genser.html
+++ b/HTML/Fridas-genser.html
@@ -100,7 +100,7 @@
       <h1 class="page-heading h1-heading product-heading font-size-6-4">
         Fridas genser
       </h1>
-      <section class="grid grid--6-cols gap-6-4">
+      <section class="content-section grid grid--6-cols gap-6-4">
         <article class="pattern-img-section">
           <!-- Slide container -->
           <div class="slider">
