--- a/HTML/Malins-genser.html
+++ b/HTML/Malins-genser.html
@@ -100,7 +100,7 @@
       <h1 class="page-heading h1-heading product-heading font-size-6-4">
         Malins genser
       </h1>
-      <section class="grid grid--6-cols gap-6-4">
+      <section class="content-section grid grid--6-cols gap-6-4">
         <article class="pattern-img-section">
           <!-- Slide container -->
           <div class="slider">
@@ -144,7 +144,6 @@
             forskjellige garnkvaliteter som tilsammen blir en utrolig lett,
             luftig og deilig genser.<br />
             <br />
-            Strikk alltid en prøvelapp først for å sjekke strikkefastheten.<br /><br />
 
             <span>Vanskelighetsgrad:</span>
             4 av 5<br />
