Move index.html from HTML folder

--- a/HTML/Evelinagenser.html
+++ b/HTML/Evelinagenser.html
@@ -25,7 +25,7 @@
   <!-- HEADER SECTION -->
   <!-- --------------- -->
   <header class="flex align-items--center navbar" id="navbar">
-    <a class="header-logo" href="/HTML/index.html">
+    <a class="header-logo" href="/index.html">
       <img
         class="logo"
         alt="EMMA by Emma Elisabeth Knit logo"
@@ -51,19 +51,17 @@
           <a
             class="main-nav-link cursor-pointer"
             href="
-            /HTML/index.html#pattern"
+            /index.html#pattern"
             >OPPSKRIFTER</a
           >
         </li>
         <li>
-          <a class="main-nav-link cursor-pointer" href="/HTML/index.html#about"
+          <a class="main-nav-link cursor-pointer" href="/index.html#about"
             >OM EMMA</a
           >
         </li>
         <li>
-          <a
-            class="main-nav-link cursor-pointer"
-            href="/HTML/index.html#contact"
+          <a class="main-nav-link cursor-pointer" href="/index.html#contact"
             >Kontakt</a
           >
         </li>
@@ -73,21 +71,17 @@
         class="main-nav-list font-size-1-6 big-screen flex align-items--center"
       >
         <li>
-          <a
-            class="main-nav-link cursor-pointer"
-            href="/HTML/index.html#pattern"
+          <a class="main-nav-link cursor-pointer" href="/index.html#pattern"
             >OPPSKRIFTER</a
           >
         </li>
         <li>
-          <a class="main-nav-link cursor-pointer" href="/HTML/index.html#about"
+          <a class="main-nav-link cursor-pointer" href="/index.html#about"
             >OM EMMA</a
           >
         </li>
         <li>
-          <a
-            class="main-nav-link cursor-pointer"
-            href="/HTML/index.html#contact"
+          <a class="main-nav-link cursor-pointer" href="/index.html#contact"
             >Kontakt</a
           >
         </li>
