Add carousel.js src to product pages

--- a/HTML/Evelinagenser.html
+++ b/HTML/Evelinagenser.html
@@ -193,6 +193,7 @@
       </section>
     </article>
     <script src="/JS/script.js"></script>
+    <script src="/JS/carousel.js"></script>
   </body>
   <!-- --------------- -->
   <!-- FOOTER SECTION -->
