--- a/HTML/Fridas-genser.html
+++ b/HTML/Fridas-genser.html
@@ -180,6 +180,7 @@
       </section>
     </article>
     <script src="/JS/script.js"></script>
+    <script src="/JS/carousel.js"></script>
   </body>
   <!-- --------------- -->
   <!-- FOOTER SECTION -->
