--- a/HTML/Guros-genser.html
+++ b/HTML/Guros-genser.html
@@ -186,6 +186,7 @@
       </section>
     </article>
     <script src="/JS/script.js"></script>
+    <script src="/JS/carousel.js"></script>
   </body>
   <!-- --------------- -->
   <!-- FOOTER SECTION -->
