--- a/HTML/Guros-lue.html
+++ b/HTML/Guros-lue.html
@@ -163,6 +163,7 @@
       </section>
     </article>
     <script src="/JS/script.js"></script>
+    <script src="/JS/carousel.js"></script>
   </body>
   <!-- --------------- -->
   <!-- FOOTER SECTION -->
