Fix bug in btn style

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <!-- HEADER SECTION -->
   <!-- --------------- -->
   <header class="flex align-items--center navbar" id="navbar">
-    <a class="header-logo" href="/HTML/index.html">
+    <a class="header-logo" href="/index.html">
       <img
         class="logo"
         alt="EMMA by Emma Elisabeth Knit logo"
