Update link to product page on Hero btn

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <h1 class="hero-heading font-size-12-1">Guros lue</h1>
             <a
               class="btn-hero btn font-size-1-6 cursor-pointer"
-              href="/HTML/Product-page.html"
+              href="/HTML/Guros-lue.html"
             >
               Se mer
             </a>
