Remove contact form

--- a/index.html
+++ b/index.html
@@ -341,51 +341,13 @@
           </section>
         </section>
       </section>
-
-      <!-- -------------------- -->
-      <!-- CONTACT FORM SECTION -->
-      <!-- -------------------- -->
-      <section
-        class="contact-section container align-items--center flex flex-dir-column"
-        id="contact"
-      >
-        <h2 class="contact-heading h2-heading font-size-4-8">Ta Kontakt</h2>
-        <form method="get" class="contact-form flex flex-dir-column">
-          <input
-            class="input-field"
-            id="name"
-            type="text"
-            placeholder="NAVN *"
-            required
-          />
-          <input
-            class="input-field"
-            id="email"
-            type="email"
-            placeholder="DIN E-POST *"
-            required
-          />
-          <textarea
-            class="input-field message-field"
-            id="message"
-            type="text"
-            placeholder="MELDING *"
-            rows="15"
-            required
-          ></textarea>
-
-          <button value="submit" class="btn--contact">Send</button>
-
-          <p class="ps align-items--center">* Feltet må fylles ut</p>
-        </form>
-      </section>
     </main>
     <script src="/JS/script.js"></script>
   </body>
   <!-- --------------- -->
   <!-- FOOTER SECTION -->
   <!-- --------------- -->
-  <footer class="footer container">
+  <footer id="contact" class="footer container">
     <section>
       <article class="flex flex-dir-column footer-section">
         <ul class="social-links flex">
