Update contact links

--- a/HTML/Malins-genser.html
+++ b/HTML/Malins-genser.html
@@ -61,9 +61,7 @@
           >
         </li>
         <li>
-          <a class="main-nav-link cursor-pointer" href="/index.html#contact"
-            >Kontakt</a
-          >
+          <a class="main-nav-link cursor-pointer" href="#contact">Kontakt</a>
         </li>
       </ul>
       <!-- NAV MENU: BIG SCREEN -->
@@ -81,9 +79,7 @@
           >
         </li>
         <li>
-          <a class="main-nav-link cursor-pointer" href="/index.html#contact"
-            >Kontakt</a
-          >
+          <a class="main-nav-link cursor-pointer" href="#contact">Kontakt</a>
         </li>
       </ul>
     </nav>
@@ -181,7 +177,7 @@
   <!-- --------------- -->
   <!-- FOOTER SECTION -->
   <!-- --------------- -->
-  <footer class="footer container">
+  <footer id="contact" class="footer container">
     <section>
       <article class="flex flex-dir-column footer-section">
         <ul class="social-links flex">
