--- a/index.html
+++ b/index.html
@@ -227,10 +227,7 @@
           <!-- --------------- -->
           <section class="pattern-sheet">
             <section class="pattern margin flex flex-dir-column gap-3-2">
-              <!-- NORWEGIAN -->
-              <section
-                class="lang-norsk grid grid--3-cols gap-3-2 language-filter"
-              >
+              <section class="grid grid--3-cols gap-3-2 language-filter">
                 <!-- GUROS LUE-->
                 <a
                   href="/HTML/Guros-lue.html"
