--- a/HTML/Knittingvideoes.html
+++ b/HTML/Knittingvideoes.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="/CSS/style.css" />
     <link rel="stylesheet" href="/CSS/queries.css" />
 
-    <title>EMMA | Guros Lue</title>
+    <title>EMMA | Malins Genser</title>
   </head>
 
   <!-- --------------- -->
@@ -98,82 +98,15 @@
       </ul>
     </nav>
   </header>
+  <!-- --------------- -->
+  <!-- BODY SECTION -->
+  <!-- --------------- -->
   <body>
-    <article id="gln" class="page-section--product margin-LF-auto">
-      <p class="sticker">Norsk</p>
-      <h1 class="page-heading h1-heading product-heading font-size-6-4">
-        Guros lue
-      </h1>
-      <section class="content-section grid grid--3-cols gap-6-4">
-        <article class="pattern-img-section">
-          <!-- Slide container -->
-          <div class="slider">
-            <!-- Slide 1 -->
-            <div class="slide pattern-img-main">
-              <img class="pattern-img" src="/Img/Guros-lue/gl1.png" />
-            </div>
-            <!-- Slide 2 -->
-            <div class="slide">
-              <img class="pattern-img" src="/Img/Guros-lue/gl2.png" />
-            </div>
-            <!-- Slide 3 -->
-            <div class="slide">
-              <img class="pattern-img" src="/Img/Guros-lue/gl4.png" />
-            </div>
-          </div>
-          <!-- Buttons -->
-          <button class="btn-prev slide-btn">
-            <i class="fa-solid fa-angle-left arrow-icon"></i>
-          </button>
-          <button class="btn-next slide-btn">
-            <i class="fa-solid fa-angle-right arrow-icon"></i>
-          </button>
-        </article>
-        <article class="pattern-text pattern-description">
-          <h3 class="text-heading">Beskrivelse</h3>
-          <p class="description">
-            Guros lue strikkes nedenfra og opp i perleribb. Brettekanten nederst
-            på luen strikkes opp underveis. På den måten blir luen ekstra tykk
-            over ørene, uten at brettekanten kan skli opp eller ned i bruk.<br /><br />Strikk
-            alltid en prøvelapp først for å sjekke strikkefastheten.<br /><br />
-            <span>Vanskelighetsgrad:</span>
-            2 av 5<br />
-            <span>Språk:</span> Norsk
-          </p>
-          <a
-            target="_blank"
-            href="https://www.ravelry.com/patterns/library/guros-lue"
-            class="btn btn--with-icon"
-          >
-            <i class="fa-solid fa-cart-plus add-cart-icon--btn"></i>
-            KJØP PÅ RAVELRY
-          </a>
-        </article>
-        <article class="pattern-text pattern-info">
-          <h3 class="text-heading">Info</h3>
-          <p class="description">
-            <span>Størrelse:</span> 1-3 mnd (6-9 mnd) 1-2 år (2-3 år) 4-8 år
-            (ungdom/dame) herre<br /><br />
-            <span>Passer hodeomkrets:</span> 32 (40-42) 44 (46) 50 (54-56) 58-60
-            cm<br /><br />
-            <span>Strikkefasthet:</span> 16 masker perleribb på p 4,5mm = 10
-            cm<br /><br />
-            <span>Veiledende pinner:</span> 4,5 mm rundpinne 30 cm (for de
-            minste str)/ 40 cm og strømpepinner eller 60/80 cm rundpinne til
-            magic loop.<br /><br />
-            <span>Materiale:</span> 50 (50) 50 (100) 100 (100) 100g Double
-            Sunday fra Sandnes garn (50g = 108m)<br />
-            <br />
-            <span>Garnalternativ:</span> <br />Dale garn Merino 22, <br />
-            DSA Alpakka Tweed classic,<br />Klompelompe merinoull,<br />
-            Rauma Puno Petit, <br />Drops Merino Extra Fine,<br />
-            eller Drops Sky
-          </p>
-        </article>
-      </section>
-    </article>
+    <h1 class="page-heading h1-heading product-heading font-size-6-4">
+      Strikkevideoer
+    </h1>
     <script src="/JS/script.js"></script>
-    <script src="/JS/carousel.js"></script>
+    <script src="/JS/videopage.js"></script>
   </body>
   <!-- --------------- -->
   <!-- FOOTER SECTION -->
