--- a/index.html
+++ b/index.html
@@ -56,6 +56,13 @@
           >
         </li>
         <li>
+          <a
+            class="main-nav-link cursor-pointer"
+            href="/HTML/Knittingvideoes.html"
+            >Strikkevideoer</a
+          >
+        </li>
+        <li>
           <a class="main-nav-link cursor-pointer" href="#about">OM EMMA</a>
         </li>
         <li>
@@ -69,6 +76,13 @@
         <li>
           <a class="main-nav-link cursor-pointer" href="#pattern"
             >OPPSKRIFTER</a
+          >
+        </li>
+        <li>
+          <a
+            class="main-nav-link cursor-pointer"
+            href="/HTML/Knittingvideoes.html"
+            >Strikkevideoer</a
           >
         </li>
         <li>
