--- a/HTML/Fridas-genser.html
+++ b/HTML/Fridas-genser.html
@@ -56,6 +56,13 @@
           >
         </li>
         <li>
+          <a
+            class="main-nav-link cursor-pointer"
+            href="/HTML/Knittingvideoes.html"
+            >Strikkevideoer</a
+          >
+        </li>
+        <li>
           <a class="main-nav-link cursor-pointer" href="/index.html#about"
             >OM EMMA</a
           >
@@ -71,6 +78,13 @@
         <li>
           <a class="main-nav-link cursor-pointer" href="/index.html#pattern"
             >OPPSKRIFTER</a
+          >
+        </li>
+        <li>
+          <a
+            class="main-nav-link cursor-pointer"
+            href="/HTML/Knittingvideoes.html"
+            >Strikkevideoer</a
           >
         </li>
         <li>
