Add video nav and videos

--- a/HTML/Knittingvideoes.html
+++ b/HTML/Knittingvideoes.html
@@ -102,11 +102,43 @@
   <!-- BODY SECTION -->
   <!-- --------------- -->
   <body>
-    <h1 class="page-heading h1-heading product-heading font-size-6-4">
-      Strikkevideoer
-    </h1>
-    <script src="/JS/script.js"></script>
-    <script src="/JS/videopage.js"></script>
+    <main class="main-section">
+      <article class="container section margin-LF-auto">
+        <h1 class="page-heading videos-page-heading h1-heading font-size-6-4">
+          Strikkevideoer
+        </h1>
+        <nav class="video-nav">
+          <a href="#leggeOppMasker" class="video-nav--item no-border"
+            >Legge opp masker</a
+          >
+          <a href="#strikketeknikker" class="video-nav--item"
+            >Strikketeknikker</a
+          >
+          <a href="#økninger" class="video-nav--item">Økninger</a>
+          <a href="#felleMasker" class="video-nav--item">Felle masker</a>
+          <a href="#diverse" class="video-nav--item">Diverse</a>
+        </nav>
+        <section class="video-main-section">
+          <article id="leggeOppMasker" class="video-section">
+            <h3 class="text-heading video-heading">Legge opp masker</h3>
+            <iframe
+              class="video"
+              width="560"
+              height="315"
+              src="https://www.youtube.com/embed/itPw3_F8oFU"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen
+            ></iframe>
+            <p class="video-title">Legge opp masker</p>
+          </article>
+        </section>
+      </article>
+
+      <script src="/JS/script.js"></script>
+      <script src="/JS/videopage.js"></script>
+    </main>
   </body>
   <!-- --------------- -->
   <!-- FOOTER SECTION -->
